; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_stripe_chunks_unlock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_stripe_chunks_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stripe = type { i32 }
%struct.stripe_chunk = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stripe*)* @stripe_chunks_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stripe_chunks_unlock(%struct.stripe* %0) #0 {
  %2 = alloca %struct.stripe*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.stripe_chunk*, align 8
  store %struct.stripe* %0, %struct.stripe** %2, align 8
  %5 = load %struct.stripe*, %struct.stripe** %2, align 8
  %6 = getelementptr inbounds %struct.stripe, %struct.stripe* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.TYPE_4__* @RS(i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %26, %1
  %13 = load i32, i32* %3, align 4
  %14 = add i32 %13, -1
  store i32 %14, i32* %3, align 4
  %15 = icmp ne i32 %13, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %12
  %17 = load %struct.stripe*, %struct.stripe** %2, align 8
  %18 = load i32, i32* %3, align 4
  %19 = call %struct.stripe_chunk* @CHUNK(%struct.stripe* %17, i32 %18)
  store %struct.stripe_chunk* %19, %struct.stripe_chunk** %4, align 8
  %20 = load %struct.stripe_chunk*, %struct.stripe_chunk** %4, align 8
  %21 = call i64 @TestClearChunkUnlock(%struct.stripe_chunk* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %16
  %24 = load %struct.stripe_chunk*, %struct.stripe_chunk** %4, align 8
  %25 = call i32 @ClearChunkLocked(%struct.stripe_chunk* %24)
  br label %26

26:                                               ; preds = %23, %16
  br label %12

27:                                               ; preds = %12
  ret void
}

declare dso_local %struct.TYPE_4__* @RS(i32) #1

declare dso_local %struct.stripe_chunk* @CHUNK(%struct.stripe*, i32) #1

declare dso_local i64 @TestClearChunkUnlock(%struct.stripe_chunk*) #1

declare dso_local i32 @ClearChunkLocked(%struct.stripe_chunk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
